# Sinput

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml
desktop/: index.html  package.json
desktop/src/: main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
pwa/: gen-icon.py  package.json
pwa/public/: _headers  index.html  manifest.json  sw.js
shared/: package.json
shared/src/: index.ts
worker/: package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts  pair-code.ts  room.ts
worker/test/: room.test.ts
